<resources>
    <string name="app_name">Shopping Cart App</string>
    <string name="main_menu">Main Menu</string>
    <string name="left_bar">Left Bar</string>
    <string name="cart_icon">Shopping Cart</string>
    <string name="drinks">Drinks</string>
    <string name="drinks_image">Drinks Image</string>
    <string name="snack_image">Snack image</string>
    <string name="snacks">Snacks</string>
    <string name="foods">Foods</string>
    <string name="foods_image">Foods image</string>
    <string name="top_up">Top Up</string>
    <string name="top_up_image">Top up image</string>
    <string name="your_order_complete_n_thank_you">Your order complete Thank You</string>
</resources>