<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentStart="true"
            android:src="@drawable/menu"
            android:contentDescription="@string/left_bar" />


        <LinearLayout
            android:id="@+id/my_order"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:fontFamily="@font/poppins_semibold"
                android:text="My Order"
                android:textSize="16sp" />

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:contentDescription="@string/cart_icon"
                android:src="@drawable/cart" />
        </LinearLayout>


    </RelativeLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/app_name"
        android:textColor="@color/black"
        android:textSize="34sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/main_menu"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="558dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <androidx.gridlayout.widget.GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:rowCount="1"
            app:columnCount="2"
            app:alignmentMode="alignMargins"
            app:columnOrderPreserved="false">

            <androidx.cardview.widget.CardView
                android:id="@+id/drinks_menu"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:cardCornerRadius="20dp"
                app:cardUseCompatPadding="true"
                app:layout_columnWeight="1"
                app:layout_rowWeight="1">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:background="@color/cardView_drink">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:layout_marginStart="0dp"
                        android:layout_marginTop="0dp"
                        android:fontFamily="@font/poppins_semibold"
                        android:padding="20dp"
                        android:paddingStart="15dp"
                        android:text="@string/drinks"
                        android:textSize="20sp" />

                    <ImageView
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentBottom="true"
                        android:layout_marginEnd="-20dp"
                        android:layout_marginBottom="-20dp"
                        android:src="@drawable/drink"
                        android:contentDescription="@string/drinks_image" />
                </RelativeLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/snacks_menu"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:cardCornerRadius="20dp"
                app:cardUseCompatPadding="true"
                app:layout_columnWeight="1"
                app:layout_rowWeight="1">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:background="@color/cardView_snack">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:layout_marginStart="0dp"
                        android:layout_marginTop="0dp"
                        android:fontFamily="@font/poppins_semibold"
                        android:padding="20dp"
                        android:paddingStart="15dp"
                        android:text="@string/snacks"
                        android:textSize="20sp" />

                    <ImageView
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentBottom="true"
                        android:layout_marginEnd="-20dp"
                        android:layout_marginBottom="-20dp"
                        android:src="@drawable/snack"
                        android:contentDescription="@string/snack_image" />
                </RelativeLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/foods_menu"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:cardCornerRadius="20dp"
                app:cardUseCompatPadding="true"
                app:layout_columnWeight="1"
                app:layout_rowWeight="1">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:background="@color/cardView_food">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:layout_marginStart="0dp"
                        android:layout_marginTop="0dp"
                        android:fontFamily="@font/poppins_semibold"
                        android:padding="20dp"
                        android:paddingStart="15dp"
                        android:text="@string/foods"
                        android:textSize="20sp" />

                    <ImageView
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentBottom="true"
                        android:layout_marginEnd="-20dp"
                        android:layout_marginBottom="-20dp"
                        android:src="@drawable/food"
                        android:contentDescription="@string/foods_image" />
                </RelativeLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/topUp_menu"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:cardCornerRadius="20dp"
                app:cardUseCompatPadding="true"
                app:layout_columnWeight="1"
                app:layout_rowWeight="1">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:background="@color/cardView_topUp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:layout_marginStart="0dp"
                        android:layout_marginTop="0dp"
                        android:fontFamily="@font/poppins_semibold"
                        android:padding="20dp"
                        android:paddingStart="15dp"
                        android:text="@string/top_up"
                        android:textSize="20sp" />

                    <ImageView
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentBottom="true"
                        android:layout_marginEnd="-20dp"
                        android:layout_marginBottom="-20dp"
                        android:src="@drawable/topup"
                        android:contentDescription="@string/top_up_image" />
                </RelativeLayout>
            </androidx.cardview.widget.CardView>

        </androidx.gridlayout.widget.GridLayout>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
